# ImSharp

./: .gitignore  ImSharp.sln  README.md
ImSharp/: Context.cs  Glfw.cs  ImBitArray.cs  ImSharp.csproj  OpenGL3.cs  Widgets.cs
ImSharp/Backends/Glfw/: Native.cs
ImSharp/Backends/OpenGL3/: Native.cs
ImSharpGenerator/: CSharpWriter.cs  EnumDefinition.cs  Generator.cs  ISourceGenerator.cs  ImSharpGenerator.csproj  StructDefinition.cs  TypesInfo.cs
ImSharpNative/: .clang-format  BackendImpl.cpp  BackendImpl.h  CMake.props  CMake.targets  CMakeLists.txt  Library.cpp  Library.h  vcpkg.json
ImSharpOpenTKDemo/: DemoWindow.cs  ImSharpOpenTKDemo.csproj
